# litellm-codex-oauth-provider

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  TESTPYPI_SETUP_INSTRUCTIONS.md  docker-compose.yml  mkdocs.yaml  pyproject.toml
.github/: README.md  commit-instructions.md  copilot-instructions.md  pr-instructions.md  review-instructions.md
.github/instructions/: code.instructions.md  testing.instructions.md
.github/workflows/: ci.yml  publish.yml
configs/: litellm-config.yaml
docs/: CONTRIBUTING.md  api-reference.md  architecture.md  codex-api-integration.md  codex_sse_analysis_report.md  index.md  reference.md  testpypi-setup.md  usage-examples.md  usage.md
docs/css/: code_select.css  indentation.css
docs/development/: getting-started.md  installation.md
docs/js/: katex.js  mermaid.js
docs/scripts/: auto_admonition.py  local_asset_copy.py  macros.py
src/litellm_codex_oauth_provider/: __init__.py  _version.py  adapter.py  auth.py  constants.py  exceptions.py  http_client.py  model_map.py  openai_client.py  prompts.py  provider.py  reasoning.py  remote_resources.py  sse_utils.py  streaming_utils.py
tests/: __init__.py  conftest.py  test_auth.py  test_integration.py  test_provider.py  test_transformations.py
tests/assistant_validation/: __init__.py  final_validation.py  simple_sse_validation.py
tests/e2e/: __init__.py  test_codex_e2e.py
tests/integration/: __init__.py  constants.py  mock_codex_api.py  test_litellm_integration.py  test_sse_mock_comprehensive.py
tests/unit/: __init__.py  test_auth.py  test_provider.py  test_sse_implementation.py  test_sse_utils_async.py  test_transformations.py
