[project]
authors = [{ name = "jslorrma", email = "jslorrma@gmail.com" }]
name = "litellm-codex-oauth-provider"
description = "LiteLLM custom provider for bridging Codex OAuth authentication to OpenAI-compatible APIs. Enables ChatGPT Plus access via Codex CLI tokens, with seamless integration into LiteLLM proxy and multi-provider routing. See idea.md for architecture."
dynamic = ["version"]
readme = "README.md"

# ================== DEPENDENCIES ===================
requires-python = ">= 3.11, <3.14"
dependencies = [
  "litellm>=1.80.7,<2",
  "httpx>=0.28.1,<0.29",
  "typing_extensions>=4.15.0,<5",
  "openai>=2.8.0",
]

# ================== METADATA ===================
[project.urls]
"Homepage" = "https://github.com/jslorrma/litellm-codex-oauth-provider"
"Repository" = "https://github.com/jslorrma/litellm-codex-oauth-provider"


# ================= PIXI CONFIGURATION =================

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
litellm_codex_oauth_provider = { path = ".", editable = true }

# System requirements for Pixi
# These specify the minimum system versions required for the component to run.
[tool.pixi.system-requirements]
linux = "4.4.0"
macos = "12.0"

#================== BUILD SYSTEM ===================
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.version]
path = "src/litellm_codex_oauth_provider/_version.py"

# ================= PIXI FEATURE SETS (GROUPS OF DEPENDENCIES) =================
[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.4"
pytest-cov = ">=6.0.0"
pytest-mock = ">=3.14.0"
pytest-xdist = ">=3.8.0"
pytest-asyncio = ">=1.0.0"

[tool.pixi.feature.lint.dependencies]
ruff = ">=0.12"

[tool.pixi.feature.pre-commit.pypi-dependencies]
prek = ">=0.2.6"

[tool.pixi.feature.docs.dependencies]
mkdocstrings = ">=0.29.0"
mkdocstrings-python = ">=1.16.6"
mkdocs-autorefs = ">=1.4.1"
mkdocs-gen-files = ">=0.4.0"
mkdocs-get-deps = ">=0.2.0"
mkdocs-literate-nav = ">=0.6.2"
mkdocs-material = ">=9.6.9"
mkdocs-material-extensions = ">=1.3.1"
mkdocs-git-revision-date-localized-plugin = ">=1.2.0"
mkdocs-macros-plugin = ">=1.3.0"
mdx_truly_sane_lists = ">=1.2.0"
mkdocs-include-markdown-plugin = ">=7.0.0"
mike = ">=2.0.0"
git-changelog = ">=2.0.0"

[tool.pixi.feature.docs.pypi-dependencies]
mkdocs-section-index = ">=0.3.9"
markdown-katex = ">=202406.1035"
mdformat = ">=0.7.22"
mdformat-gfm = ">=0.4.1"
mdformat-frontmatter = ">=2.0.8"
mdformat-footnote = ">=0.1.1"
mdformat-gfm-alerts = ">=1.0.1"
mkdocs-minify-plugin = ">=0.6.0"

[tool.pixi.feature.local.dependencies]
ipykernel = ">=6.29.5"
ipython = ">=8.0"

[tool.pixi.feature.local.pypi-dependencies]
litellm = { version = ">=1.80.7,<2", extras = ["proxy"] }

[tool.pixi.feature.build.dependencies]
git-changelog = ">=2.0.0"
hatch = ">=1.0.0"
twine = ">=6.0.0"

# ================= PIXI ENVIRONMENTS =================
[tool.pixi.environments]
local-dev = { features = [
  "lint",
  "test",
  "local",
  "pre-commit",
], solve-group = "default" }
test = { features = ["test", "local"], solve-group = "default" }
lint = { features = ["lint"], solve-group = "lint" }
pre-commit = { features = ["pre-commit"], solve-group = "pre-commit" }
docs = { features = ["docs"], solve-group = "docs" }
build = { features = ["build"], solve-group = "build" }

# ==================== PIXI TASKS ======================
[tool.pixi.tasks]
update-pixi = { cmd = "pixi self-update" }
post-install = { cmd = "pixi run -e pre-commit install" }

# ================= PIXI FEATURE TASKS =================
[tool.pixi.feature.pre-commit.tasks]
# Run all prek hooks
run = { cmd = "prek run --all" }
# Install prek hooks (optional, for local git integration)
install = { cmd = "prek install -f && prek install-hooks" }
# Update all prek hooks (optional)
update-hooks = { cmd = "prek auto-update" }
# List configured hooks
list-hooks = { cmd = "prek list" }
# Uninstall git hooks
uninstall = { cmd = "prek uninstall" }

[tool.pixi.feature.test.tasks]
test = { cmd = "pytest" }
test-with-coverage = { cmd = "pytest --cov=src --cov-report=xml --cov-report=html --junitxml=test-results.xml" }

[tool.pixi.feature.lint.tasks]
lint = { cmd = "ruff check . --fix --unsafe-fixes" }
lint-sonar = { cmd = "ruff check . --output-format=json --output-file=ruff-report.json" }
format = { cmd = "ruff format ." }

[tool.pixi.feature.docs.tasks]
_docs-build = { cmd = "mkdocs build" }
_docs-serve = { cmd = "mkdocs serve --livereload" }
_clean-docs = { cmd = "rm -rf assets", cwd = "docs" }
docs-deploy = { cmd = "mike deploy --push --update-aliases", depends-on = [
  "docs-build",
] }

[tool.pixi.feature.docs.tasks.docs-build]
depends-on = ["_docs-build", "_clean-docs"]

[tool.pixi.feature.docs.tasks.docs-serve]
depends-on = ["_docs-serve", "_clean-docs"]

[tool.pixi.feature.build.tasks]
get-version = { cmd = "hatch version" }
build = { cmd = "hatch build" }
publish = { cmd = "twine upload" }

[tool.pixi.feature.build.tasks.bump-version]
cmd = """old_version=$(hatch version) && \
hatch version $segment \
&& version=$(hatch version) \
&& pixi update \
&& git add pixi.lock pyproject.toml \
&& git commit --no-verify -m 'Bump version $old_version -> $version'"""


# ================= RUFF CONFIGURATION =================
[tool.ruff]
# Maximum allowed line length
line-length = 100
# Number of spaces per indentation level
indent-width = 4
# Target Python version for linting
target-version = "py310"
# Automatically apply fixes for fixable rules
fix = true
# Source directories to lint
src = ["src", "notebooks", "tests"]

[tool.ruff.format]
# Exclude version file from formatting
exclude = ["src/_version.py"]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Do not skip magic trailing commas
skip-magic-trailing-comma = false
# Use LF line endings
line-ending = "lf"
# Format code blocks in docstrings
docstring-code-format = true
# Dynamically determine docstring code line length
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
# Use numpy docstring convention
pydocstyle.convention = "numpy"
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Enable a broad set of linting rules (see comments for each)
select = [
  "I",   # isort: import sorting
  "F",   # pyflakes: logical errors
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "PLC", # pylint conventions
  "PLE", # pylint errors
  "PLR", # pylint refactor
  "PLW", # pylint warnings
  "B",   # flake8 bugbear
  "PIE", # flake8 misc lints
  "ISC", # flake8 implicit string concatenation
  "TID", # flake8 tidy imports
  "TC",  # flake8 type-checking
  "ARG", # flake8 unused arguments
  "PTH", # flake8 use pathlib
  "RET", # flake8 return statements
  "SIM", # flake8 simplify
  "SLF", # flake8 self
  "C4",  # flake8 comprehensions
  "A",   # flake8 builtins
  "ANN", # flake8 annotations
  "N",   # flake8 naming
  "PGH", # pygrep-hooks
  "UP",  # pyupgrade
  "D",   # pydocstyle
  "RUF", # Ruff-specific rules
  "C90", # check McCabe complexity
]
# Do not auto-fix refactor rules
unfixable = ["PLR"]
# Ignore rules that conflict with formatter or are too strict
ignore = [
  "E501",   # line too long
  "W191",   # tab indentation
  "E111",   # indentation not multiple of 4
  "E114",   # indentation not multiple of 4 (comment)
  "D206",   # docstring-tab-indentation
  "D300",   # triple-single-quotes
  "E117",   # over-indented
  "ISC001", # implicitly concatenated strings on one line
  "TID252", # prefer absolute imports
  "B905",   # zip without explicit
  "ANN401", # dynamically typed expressions
  "ANN002", # missing typed args
  "ANN003", # missing typed kwargs
  "RET503", # missing explicit return type
  "D400",   # docstring first line should end with period
  "D401",   # docstring first line imperative mood
  "D415",   # docstring first line should end with period, question mark, or exclamation point
]
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["D", "E402"]
"tests/*" = []
